Fix negative margin on tablets on demo signatures page.

--- a/assets/page.scss
+++ b/assets/page.scss
@@ -2670,8 +2670,11 @@ button.inherited {
 
 #demo-signatures-page {
 	.video {
-		margin-top: 5rem;
-		margin-bottom: -5rem;
+		margin: 5rem 0 (-5rem);
+
+		@include mobile-and-tablet {
+			margin: 3rem 0 (-3rem);
+		}
 	}
 
 	.video iframe {
